--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,1 +1,105 @@
+:root{
+    --main-blue: #00A19D;
+    --main-yellow: #FFB344;
+    --main-red: #E05D5D;
+    --white:#fff;
+    --menu-transition:0.7s;
+}
+
+
 /* --------- Navigation -------- */
+
+#mask{
+    opacity: 0;
+}
+
+.navbar{
+    box-shadow: 0 2px 10px 0 rgb(0 0 0 / 10%);
+}
+
+#navbarNav{
+    padding-left: 32px;
+}
+
+.navbar-brand{
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.navbar-nav{
+    font-size: 18px;
+    font-weight: 550;
+}
+
+.navbar__user{
+    justify-content: flex-end;
+    display: flex;
+}
+
+.btn__user{
+    background-color: var(--main-blue);
+    color: var(--white);
+    width: 110px;
+    border-radius: 50px;
+    font-weight: 550;
+}
+
+.btn__user + .btn__user{
+    margin-left: 12px;
+}
+
+.btn__user:hover{
+    background-color: var(--main-red);
+    color: #fff;
+
+}
+
+.btn__user--login{
+    background-color: transparent;
+    color: #333;
+}
+.btn__user--signup{
+    background-color: var(--main-yellow);
+    color: #fff;
+}
+
+
+@media (max-width: 992px){
+    .navbar-nav{
+        display: inline-block;
+        width: 100%;
+
+    }
+    #navbarNav{
+        display:flex;
+        position: fixed;
+        padding: 12px 24px;
+        top: 0;
+        left: -350px;
+        width: 250px;
+        height: 100%;
+        background-color: var(--white);
+        border-top: 1px solid #0674ec;
+        transition: var(--menu-transition);
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        z-index: 99;
+    }
+    
+    .nav-item{
+        border-bottom: 1px solid #ebebeb;
+    }
+
+    #mask{
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        background-color: #000;
+        opacity: 0;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        transition: var(--menu-transition);
+    }
+}
