--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,6 +11,7 @@
 
 #mask{
     opacity: 0;
+    visibility:hidden;
 }
 
 .navbar{
@@ -102,5 +103,27 @@
         top: 0;
         left: 0;
         transition: var(--menu-transition);
+    }
+}
+@media (min-width: 1400px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+        max-width: 976px;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 976px;
     }
 }
