Update profile and create learning page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,7 @@
     --main-blue: #00A19D;
     --main-yellow: #FFB344;
     --main-red: #E05D5D;
+    --main-gray-color: #898989;
     --white:#fff;
     --menu-transition:0.7s;
 }
